--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -13,10 +13,18 @@ Not yet released.
 - `.xlsx` extension is now supported on `/emails/import`.
 
 ### 🐛 Bug Fixes
-- [Bug in OpenPanel UI on /domains/log #604](https://github.com/stefanpejcic/OpenPanel/issues/604)
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
 - [Bug in OpenPanel UI on /emails/import doesn't accept semicolon separators #590](https://github.com/stefanpejcic/OpenPanel/issues/590#issuecomment-3121668773)
 - fixed error `NameError: name 'nginx_conf_path' is not defined` when removing NodeJS/Python applications.
 - fixed bug on `/php/domains` page when same php version is set for domain as the current version.
 - fixed bug on 2FA widget button causing redirect to `/api/account/2fa`.
 - fixed error on `/process-manager` when container is restarting.
+- [Bug in OpenPanel UI on /domains/log #604](https://github.com/stefanpejcic/OpenPanel/issues/604)
+- [Missing Breadcrumb in Process Manager #608](https://github.com/stefanpejcic/OpenPanel/issues/608)
+- [CSS bug in OpenPanel UI on /server/usage #601](https://github.com/stefanpejcic/OpenPanel/issues/601)
+- [Autologin from OpenAdmin UI not working when hostname -I is private IP #592](https://github.com/stefanpejcic/OpenPanel/issues/592)
+- [Bug in OpenPanel /wordpress/install mysql container is not healthy #589](https://github.com/stefanpejcic/OpenPanel/issues/589)
+- [Error when creating email account #588](https://github.com/stefanpejcic/OpenPanel/issues/588)
+- [Issues while installing on AlmaLinux 9 #582](https://github.com/stefanpejcic/OpenPanel/issues/582)
+
+
