--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -26,5 +26,6 @@ Not yet released.
 - [Bug in OpenPanel /wordpress/install mysql container is not healthy #589](https://github.com/stefanpejcic/OpenPanel/issues/589)
 - [Error when creating email account #588](https://github.com/stefanpejcic/OpenPanel/issues/588)
 - [Issues while installing on AlmaLinux 9 #582](https://github.com/stefanpejcic/OpenPanel/issues/582)
-
-
+- [FTP - does not allow to connect after path change #594](https://github.com/stefanpejcic/OpenPanel/issues/594)
+- [FTP - cannot create subfolder in domain path #595](https://github.com/stefanpejcic/OpenPanel/issues/595)
+- [Bug in OpenPanel UI on /ftp/new #587](https://github.com/stefanpejcic/OpenPanel/issues/587)
