--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -29,3 +29,5 @@ Not yet released.
 - [FTP - does not allow to connect after path change #594](https://github.com/stefanpejcic/OpenPanel/issues/594)
 - [FTP - cannot create subfolder in domain path #595](https://github.com/stefanpejcic/OpenPanel/issues/595)
 - [Bug in OpenPanel UI on /ftp/new #587](https://github.com/stefanpejcic/OpenPanel/issues/587)
+- [Autologin to phpmyadmin is failing #610](https://github.com/stefanpejcic/OpenPanel/issues/610)
+- 
