--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -11,6 +11,7 @@ Not yet released.
 - Added links to documentaiton for Backup Destinations on `/backups/destination`.
 - improved email validation and more-descriptive error messages on `/emails/import`.
 - `.xlsx` extension is now supported on `/emails/import`.
+- [password generation in OpenCLI scripts to run containers #28](https://github.com/stefanpejcic/opencli/issues/28)
 
 ### 🐛 Bug Fixes
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
