--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -31,4 +31,5 @@ Not yet released.
 - [FTP - cannot create subfolder in domain path #595](https://github.com/stefanpejcic/OpenPanel/issues/595)
 - [Bug in OpenPanel UI on /ftp/new #587](https://github.com/stefanpejcic/OpenPanel/issues/587)
 - [Autologin to phpmyadmin is failing #610](https://github.com/stefanpejcic/OpenPanel/issues/610)
+- [FTP - password change does not work #596](https://github.com/stefanpejcic/OpenPanel/issues/596)
 - 
