--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -32,4 +32,4 @@ Not yet released.
 - [Bug in OpenPanel UI on /ftp/new #587](https://github.com/stefanpejcic/OpenPanel/issues/587)
 - [Autologin to phpmyadmin is failing #610](https://github.com/stefanpejcic/OpenPanel/issues/610)
 - [FTP - password change does not work #596](https://github.com/stefanpejcic/OpenPanel/issues/596)
-- 
+- [Bug with OpenPanel FTP when creating or uploading files/folder inside /var/www/html #613](https://github.com/stefanpejcic/OpenPanel/issues/613)
