--- a/website/docs/changelog/1.5.2.md
+++ b/website/docs/changelog/1.5.2.md
@@ -12,6 +12,8 @@ Not yet released.
 - improved email validation and more-descriptive error messages on `/emails/import`.
 - `.xlsx` extension is now supported on `/emails/import`.
 - [password generation in OpenCLI scripts to run containers #28](https://github.com/stefanpejcic/opencli/issues/28)
+- added type filters on **OpenAdmin > Settings > Modules**
+- improvements to **OpenAdmin > Plans**: new columns to display number of users on plan, ID and description. Select which columns to display. Plan with users can not be deleted.
 
 ### 🐛 Bug Fixes
 - fixed bug on FileManager that caused extract not to work if `filemanager_extract_max_time` value was modified.
