--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -1,7 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
-- 
+- *backups* module is no longer enabled by default for new installations.
 
 ### 🐛 Bug Fixes
 - fixed error starting OpenPanel UI if `/etc/openpanel/openpanel/custom_code/in_footer.html` or `/etc/openpanel/openpanel/custom_code/in_header.html` files are missing.
