--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -4,4 +4,5 @@ Not yet released.
 - *backups* module is no longer enabled by default for new installations.
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
 - fixed error starting OpenPanel UI if `/etc/openpanel/openpanel/custom_code/in_footer.html` or `/etc/openpanel/openpanel/custom_code/in_header.html` files are missing.
