--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -6,3 +6,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
 - fixed error starting OpenPanel UI if `/etc/openpanel/openpanel/custom_code/in_footer.html` or `/etc/openpanel/openpanel/custom_code/in_header.html` files are missing.
+- [install.sh: firewalld disable #615](https://github.com/stefanpejcic/OpenPanel/issues/615)
