--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -2,6 +2,9 @@ Not yet released.
 
 ### 💅 Polish
 - *backups* module is no longer enabled by default for new installations.
+- *DNS Zone Editor* selector now displays only domains that have zones on the server.
+- Apex domains can no longer be deleted if they are in use by a subdomain.
+- 
 
 ### 🐛 Bug Fixes
 - [install.sh: port output is doubled! #616](https://github.com/stefanpejcic/OpenPanel/issues/616)
