--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -13,4 +13,5 @@ Not yet released.
 - fixed error starting OpenPanel UI if `/etc/openpanel/openpanel/custom_code/in_footer.html` or `/etc/openpanel/openpanel/custom_code/in_header.html` files are missing.
 - [install.sh: firewalld disable #615](https://github.com/stefanpejcic/OpenPanel/issues/615)
 - [Bug in OpenPanel UI on /files - Ctrl + A in input fields triggers select-all on table #598](https://github.com/stefanpejcic/OpenPanel/issues/598)
+- fixed csrf bug in DNS Zone Editor when deleting individual records.
 - 
