--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -14,4 +14,4 @@ Not yet released.
 - [install.sh: firewalld disable #615](https://github.com/stefanpejcic/OpenPanel/issues/615)
 - [Bug in OpenPanel UI on /files - Ctrl + A in input fields triggers select-all on table #598](https://github.com/stefanpejcic/OpenPanel/issues/598)
 - fixed csrf bug in DNS Zone Editor when deleting individual records.
-- 
+- [Bug in OpenPanel UI on /domains/edit-dns-zone/in.rs - drawer height #597](https://github.com/stefanpejcic/OpenPanel/issues/597)
