--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -5,6 +5,7 @@ Not yet released.
 - *DNS Zone Editor* selector now displays only domains that have zones on the server.
 - Apex domains can no longer be deleted if they are in use by a subdomain.
 - public suffixes (TLDs) can no longer be added as domains.
+- [Prevent usage of subdomains by other users #581](https://github.com/stefanpejcic/OpenPanel/issues/581)
 
 ### 🐛 Bug Fixes
 - [Edit VirtualHosts does not work (403) #617](https://github.com/stefanpejcic/OpenPanel/issues/617)
