--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -6,6 +6,8 @@ Not yet released.
 - Apex domains can no longer be deleted if they are in use by a subdomain.
 - public suffixes (TLDs) can no longer be added as domains.
 - [Prevent usage of subdomains by other users #581](https://github.com/stefanpejcic/OpenPanel/issues/581)
+- Improvements to *OpenPanel > Domains* page.
+- [added type and websites count columns to Domains](https://i.postimg.cc/kCj8Fcsz/2025-07-31-17-54.png).
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
