--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -8,6 +8,7 @@ Not yet released.
 - [Prevent usage of subdomains by other users #581](https://github.com/stefanpejcic/OpenPanel/issues/581)
 - Improvements to *OpenPanel > Domains* page.
 - [added type and websites count columns to Domains](https://i.postimg.cc/kCj8Fcsz/2025-07-31-17-54.png).
+- [Improvements to Database Wizard interface and validations](https://i.postimg.cc/rVBfJ0tY/2025-07-31-19-08.png).
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
