--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -9,6 +9,7 @@ Not yet released.
 - Improvements to *OpenPanel > Domains* page.
 - [added type and websites count columns to Domains](https://i.postimg.cc/kCj8Fcsz/2025-07-31-17-54.png).
 - [Improvements to Database Wizard interface and validations](https://i.postimg.cc/rVBfJ0tY/2025-07-31-19-08.png).
+- Emails usage is now refreshed hourly for logged in OpenPanel users.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
