--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -10,6 +10,7 @@ Not yet released.
 - [added type and websites count columns to Domains](https://i.postimg.cc/kCj8Fcsz/2025-07-31-17-54.png).
 - [Improvements to Database Wizard interface and validations](https://i.postimg.cc/rVBfJ0tY/2025-07-31-19-08.png).
 - Emails usage is now refreshed hourly for logged in OpenPanel users.
+- watcher service is migrated from openadmin git repository to openpanel-configuration.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
@@ -19,3 +20,4 @@ Not yet released.
 - [Bug in OpenPanel UI on /files - Ctrl + A in input fields triggers select-all on table #598](https://github.com/stefanpejcic/OpenPanel/issues/598)
 - fixed csrf bug in DNS Zone Editor when deleting individual records.
 - [Bug in OpenPanel UI on /domains/edit-dns-zone/in.rs - drawer height #597](https://github.com/stefanpejcic/OpenPanel/issues/597)
+- fixed bug deleting user when no quotas exist */usr/local/opencli/user/delete.sh: line 121: /etc/openpanel/openpanel/core/users/repquota: No such file or directory*.
