--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -11,6 +11,7 @@ Not yet released.
 - [Improvements to Database Wizard interface and validations](https://i.postimg.cc/rVBfJ0tY/2025-07-31-19-08.png).
 - Emails usage is now refreshed hourly for logged in OpenPanel users.
 - watcher service is migrated from openadmin git repository to openpanel-configuration.
+- sentinel service is migrated from openadmin git repository to opencli.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /wordpress/install #614](https://github.com/stefanpejcic/OpenPanel/issues/614)
