--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -22,3 +22,4 @@ Not yet released.
 - fixed csrf bug in DNS Zone Editor when deleting individual records.
 - [Bug in OpenPanel UI on /domains/edit-dns-zone/in.rs - drawer height #597](https://github.com/stefanpejcic/OpenPanel/issues/597)
 - fixed bug deleting user when no quotas exist */usr/local/opencli/user/delete.sh: line 121: /etc/openpanel/openpanel/core/users/repquota: No such file or directory*.
+- fixed css bug with sidebar on OpenAdmin not showing 'Advanced' menu active when 'Demo Mode' page is opened.
