--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -25,3 +25,4 @@ Not yet released.
 - fixed bug deleting user when no quotas exist */usr/local/opencli/user/delete.sh: line 121: /etc/openpanel/openpanel/core/users/repquota: No such file or directory*.
 - fixed css bug with sidebar on OpenAdmin not showing 'Advanced' menu active when 'Demo Mode' page is opened.
 - fixed bug on *OpenAdmin > License* dispalying 'No License Key' in the field when no key is added.
+- fixed css bug with progress bar on *OpenPanel > Email Accounts* showing 100% usage for unlimited quota.
