--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -26,3 +26,4 @@ Not yet released.
 - fixed css bug with sidebar on OpenAdmin not showing 'Advanced' menu active when 'Demo Mode' page is opened.
 - fixed bug on *OpenAdmin > License* dispalying 'No License Key' in the field when no key is added.
 - fixed css bug with progress bar on *OpenPanel > Email Accounts* showing 100% usage for unlimited quota.
+- [Bug in OpenPanel UI on /cache/elasticsearch - status is Unknown #602](https://github.com/stefanpejcic/OpenPanel/issues/602)
