--- a/website/docs/changelog/1.5.3.md
+++ b/website/docs/changelog/1.5.3.md
@@ -12,6 +12,7 @@ Not yet released.
 - Emails usage is now refreshed hourly for logged in OpenPanel users.
 - watcher service is migrated from openadmin git repository to openpanel-configuration.
 - sentinel service is migrated from openadmin git repository to opencli.
+- [[Enhancement] Make this date human readable #555](https://github.com/stefanpejcic/OpenPanel/issues/555)
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /dashboard double path in sidebar for favorites #599](https://github.com/stefanpejcic/OpenPanel/issues/599)
