--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- cleanup on failure for WordPress Install will now delete only WP core files.
+
 ### 🐛 Bug Fixes
