--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -4,5 +4,6 @@ Not yet released.
 - cleanup on failure for WordPress Install will now delete only WP core files.
 - [OpenAdmin > Security > ImunifyAV](https://i.postimg.cc/3KFwf2XR/2025-08-04-12-51.png)
 - [`opencli imunify` command](https://dev.openpanel.com/cli/imunify).
+-`opencli domains-all --json` and `opencli user-list --json` show dictionaries in order to be compatible with ImunifyAV scripts.
 
 ### 🐛 Bug Fixes
