--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -7,3 +7,4 @@ Not yet released.
 -`opencli domains-all --json` and `opencli user-list --json` show dictionaries in order to be compatible with ImunifyAV scripts.
 
 ### 🐛 Bug Fixes
+- fixed 500 error on *OpenAdmin > Users > singe user > Services* and *OpenPanel > Containers* when `deploy` section is missing for services.
