--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -5,6 +5,7 @@ Not yet released.
 - [OpenAdmin > Security > ImunifyAV](https://i.postimg.cc/3KFwf2XR/2025-08-04-12-51.png)
 - [`opencli imunify` command](https://dev.openpanel.com/cli/imunify).
 -`opencli domains-all --json` and `opencli user-list --json` show dictionaries in order to be compatible with ImunifyAV scripts.
+- the following actions on *Openpanel > Containers* are now logged to user's activity log: add/edit/delete service, update cpu/ram, execute terminal command, change image tag, pull image, switch mysql/webserver type.
 
 ### 🐛 Bug Fixes
 - fixed 500 error on *OpenAdmin > Users > singe user > Services* and *OpenPanel > Containers* when `deploy` section is missing for services.
