--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - cleanup on failure for WordPress Install will now delete only WP core files.
+- [Option for users to add custom docker services [FEATURE REQUEST] #525](https://github.com/stefanpejcic/OpenPanel/issues/525)
 - [OpenAdmin > Security > ImunifyAV](https://i.postimg.cc/3KFwf2XR/2025-08-04-12-51.png)
 - [`opencli imunify` command](https://dev.openpanel.com/cli/imunify).
 -`opencli domains-all --json` and `opencli user-list --json` show dictionaries in order to be compatible with ImunifyAV scripts.
