--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -11,3 +11,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /files for Copy drawer #619](https://github.com/stefanpejcic/OpenPanel/issues/619)
 - fixed 500 error on *OpenAdmin > Users > singe user > Services* and *OpenPanel > Containers* when `deploy` section is missing for services.
+- fixed broken link for `Docker` on breadcrumbs.
