--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - [Administrators can now edit services from *OpenAdmin > Users > single user > Services* page](https://i.postimg.cc/Fzk7dJMd/filem-2025-08-05-15-43-40-ezgif-com-video-to-gif-converter.gif).
+- [Trash folder [FEATURE REQUEST] #526](https://github.com/stefanpejcic/OpenPanel/issues/526)
 - cleanup on failure for WordPress Install will now delete only WP core files.
 - [Option for users to add custom docker services [FEATURE REQUEST] #525](https://github.com/stefanpejcic/OpenPanel/issues/525)
 - [OpenAdmin > Security > ImunifyAV](https://i.postimg.cc/3KFwf2XR/2025-08-04-12-51.png)
