--- a/website/docs/changelog/1.5.4.md
+++ b/website/docs/changelog/1.5.4.md
@@ -12,6 +12,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /files for Copy drawer #619](https://github.com/stefanpejcic/OpenPanel/issues/619)
+- [Bug in OpenPanel UI on /files Unexpected error occurred while creating the folder. #623](https://github.com/stefanpejcic/OpenPanel/issues/623)
 - [Bug in OpenAdmin UI on /users/1ssa#storage - data is not loaded on #storage until tab is clicked! #606](https://github.com/stefanpejcic/OpenPanel/issues/606)
 - fixed 500 error on *OpenAdmin > Users > singe user > Services* and *OpenPanel > Containers* when `deploy` section is missing for services.
 - fixed broken link for `Docker` on breadcrumbs.
