--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -2,5 +2,6 @@ Not yet released.
 
 ### 💅 Polish
 - [Option to set custom port for NODE and PYTHON apps [FEATURE REQUEST] #618](https://github.com/stefanpejcic/OpenPanel/issues/618)
+- [Improvements to *OpenPanel > PM2 > Install* page](https://i.postimg.cc/44WNtCkb/2025-08-07-15-47.png).
 
 ### 🐛 Bug Fixes
