--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -6,3 +6,4 @@ Not yet released.
 - [`/api/auto-installer` endpoint](https://dev.openpanel.com/openpanel-api/#AutoInstaller).
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
