--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -7,5 +7,5 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
-- fixed css bug with table head on *OpenPanel > PHP > Extensions* and title.
-- 
+- fixed css bug with table head on *OpenPanel > PHP > Extensions*.
+- fixed title and sidebar active state for 'PHP Extensions' and 'PHP.INI Editor'.
