--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -5,11 +5,12 @@ Not yet released.
 - [Improvements to *OpenPanel > PM2 > Install* page](https://i.postimg.cc/44WNtCkb/2025-08-07-15-47.png).
 - [`/api/auto-installer` endpoint](https://dev.openpanel.com/openpanel-api/#AutoInstaller).
 - `/wp-verify-checksum` route is renamed to `/wp-cli/verify-checksum`.
-- `/wp-download-core` route is renamed to `/wp-cli/download-core`.
+- `/wp-download-core` route is renamed to `/wp-cli/download`.
 - `/wp-shuffle-salts` route is renamed to `/wp-cli/shuffle-salts`.
 - `/wp-cache` route is renamed to `/wp-cli/cache`.
 - `/wp-maintenance-mode` route is renamed to `/wp-cli/maintenance-mode`.
 - `/get_login_link` route is renamed to `/wp-cli/login`.
+- Added options to reinstall all plugins and check plugins checksum on WP Manager.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
