--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -10,7 +10,7 @@ Not yet released.
 - `/wp-cache` route is renamed to `/wp-cli/cache`.
 - `/wp-maintenance-mode` route is renamed to `/wp-cli/maintenance-mode`.
 - `/get_login_link` route is renamed to `/wp-cli/login`.
-- Added options to reinstall all plugins and check plugins checksum on WP Manager.
+- [Added options to reinstall all plugins and check plugins checksum on WP Manager](https://i.postimg.cc/mrq5V6Km/2025-08-07-19-16.png).
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
