--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - [Option to set custom port for NODE and PYTHON apps [FEATURE REQUEST] #618](https://github.com/stefanpejcic/OpenPanel/issues/618)
+- [Improvements to *OpenPanel > Dashboard > Usage* widget](https://i.postimg.cc/PhmYgBBf/2025-08-08-12-23.png).
 - [Improvements to *OpenPanel > PM2 > Install* page](https://i.postimg.cc/44WNtCkb/2025-08-07-15-47.png).
 - [`/api/auto-installer` endpoint](https://dev.openpanel.com/openpanel-api/#AutoInstaller).
 - `/wp-verify-checksum` route is renamed to `/wp-cli/verify-checksum`.
@@ -11,6 +12,7 @@ Not yet released.
 - `/wp-maintenance-mode` route is renamed to `/wp-cli/maintenance-mode`.
 - `/get_login_link` route is renamed to `/wp-cli/login`.
 - [Added options to reinstall all plugins and check plugins checksum on WP Manager](https://i.postimg.cc/mrq5V6Km/2025-08-07-19-16.png).
+- *OpenPanel > Dashboard > Statistics* widget is merged with *OpenPanel > Dashboard > Usage* widget.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
