--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -18,3 +18,4 @@ Not yet released.
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
 - fixed css bug with table head on *OpenPanel > PHP > Extensions*.
 - fixed title and sidebar active state for 'PHP Extensions' and 'PHP.INI Editor'.
+- fixed bug with 'Open phpMyAdmin' icon on Dashboard not opening in new tab.
