--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -16,7 +16,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
-- fixed bug with `MemPerc` returning incorrect values on  *OpenPanel > Dashboard > Usage* widget.
+- [fixed bug with `MemPerc` returning incorrect values on  *OpenPanel > Dashboard > Usage* widget](https://i.postimg.cc/TwsjyyFH/2025-08-08-12-46.png).
 - fixed bug with `how_to_topics` widget not displaying on *OpenPanel > Dashboard*.
 - fixed css bug with table head on *OpenPanel > PHP > Extensions*.
 - fixed title and sidebar active state for 'PHP Extensions' and 'PHP.INI Editor'.
