--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -21,3 +21,4 @@ Not yet released.
 - fixed css bug with table head on *OpenPanel > PHP > Extensions*.
 - fixed title and sidebar active state for 'PHP Extensions' and 'PHP.INI Editor'.
 - fixed bug with 'Open phpMyAdmin' icon on Dashboard not opening in new tab.
+- fixed bug uninstall WP from WP Manager due to CSRF token missing.
