--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -22,3 +22,4 @@ Not yet released.
 - fixed title and sidebar active state for 'PHP Extensions' and 'PHP.INI Editor'.
 - fixed bug with 'Open phpMyAdmin' icon on Dashboard not opening in new tab.
 - fixed bug uninstall WP from WP Manager due to CSRF token missing.
+- fixed bug installing WordPress from WP Manager if mysql/mariadb container was previously stopped.
