--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -15,6 +15,7 @@ Not yet released.
 - *OpenPanel > Dashboard > Statistics* widget is merged with *OpenPanel > Dashboard > Usage* widget.
 
 ### 🐛 Bug Fixes
+fixed bug with WP Manager always setting `domain/subdirectory` for installation instead of using `docroot/subdirectory`.
 - [Bug in OpenPanel UI on /mysql/import OCI runtime exec failed: `exec failed: unable to start container process: exec: "mysql": executable file not found in $PATH: unknown #624`](https://github.com/stefanpejcic/OpenPanel/issues/624)
 - [fixed bug with `MemPerc` returning incorrect values on  *OpenPanel > Dashboard > Usage* widget](https://i.postimg.cc/TwsjyyFH/2025-08-08-12-46.png).
 - fixed bug with `how_to_topics` widget not displaying on *OpenPanel > Dashboard*.
