--- a/website/docs/changelog/1.5.5.md
+++ b/website/docs/changelog/1.5.5.md
@@ -14,6 +14,7 @@ Not yet released.
 - [Added options to reinstall all plugins and check plugins checksum on WP Manager](https://i.postimg.cc/mrq5V6Km/2025-08-07-19-16.png).
 - *OpenPanel > Dashboard > Statistics* widget is merged with *OpenPanel > Dashboard > Usage* widget.
 - Optimized WordPress Install process: adding autologin mu plugin is now performed in background.
+- Removed timout limit for `backup` command executed via *OpenPanel > Docker > Terminal* for `backup` service.
 
 ### 🐛 Bug Fixes
 fixed bug with WP Manager always setting `domain/subdirectory` for installation instead of using `docroot/subdirectory`.
