--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -1,4 +1,5 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
-- fixed bug downloading imunify via IPv6.
+- fixed bug with `opencli imunify install` downloading imunify via IPv6.
+- fixed css bugs with breadcrumbs on *OpenAdmin > Security > ImunifyAV* page.
