--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -1,5 +1,6 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
+- [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
 - fixed bug with `opencli imunify install` downloading imunify via IPv6.
 - fixed css bugs with breadcrumbs on *OpenAdmin > Security > ImunifyAV* page.
