--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- [Added RNAME to default DNS zone templates](/docs/admin/domains/dns_templates/#available-template-variables) - suggested by Dominik.
+
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
 - fixed bug with `opencli imunify install` downloading imunify via IPv6.
