--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -5,6 +5,8 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
+- [WP Autologin not working after 1.5.5 update #631](https://github.com/stefanpejcic/OpenPanel/issues/631)
+- [WordPress Uninstall not working after 1.5.5 update #630](https://github.com/stefanpejcic/OpenPanel/issues/630)
 - fixed bug with `opencli imunify install` downloading imunify via IPv6.
 - fixed bug on WP auto-login when subdirectory is used but docroot is passed from frontend.
 - fixed css bugs with breadcrumbs on *OpenAdmin > Security > ImunifyAV* page.
