--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - [Added RNAME to default DNS zone templates](/docs/admin/domains/dns_templates/#available-template-variables) - suggested by Dominik.
+- added descriptive error messages for failed auto-login on WP Manager.
 
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
