--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -6,6 +6,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
+- [Bug in OpenPanel UI on / when adding to Favorites - Link and title must be provided #628](https://github.com/stefanpejcic/OpenPanel/issues/628)
 - [WP Autologin not working after 1.5.5 update #631](https://github.com/stefanpejcic/OpenPanel/issues/631)
 - [WordPress Uninstall not working after 1.5.5 update #630](https://github.com/stefanpejcic/OpenPanel/issues/630)
 - fixed bug with `opencli imunify install` downloading imunify via IPv6.
