--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - [Added RNAME to default DNS zone templates](/docs/admin/domains/dns_templates/#available-template-variables) - suggested by Dominik.
 - added descriptive error messages for failed auto-login on WP Manager.
+- added [*OpenAdmin > Services > Limits*](/docs/admin/services/limits) page where Administrators can set limits for webserver, dns, openpanel UI and other system services.
 
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
