--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -4,6 +4,7 @@ Not yet released.
 - [Added RNAME to default DNS zone templates](/docs/admin/domains/dns_templates/#available-template-variables) - suggested by Dominik.
 - added descriptive error messages for failed auto-login on WP Manager.
 - added [*OpenAdmin > Services > Limits*](/docs/admin/services/limits) page where Administrators can set limits for webserver, dns, openpanel UI and other system services.
+- `fonts.googleapis.com`, `gstatic.com`, `api.github.com`, `app.grapesjs.com`, `fonts.bunny.net` and `fonts.gstatic.com` removed from CSP header.
 
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
