--- a/website/versioned_docs/version-0.3.7/changelog/0.2.1.md
+++ b/website/versioned_docs/version-0.3.7/changelog/0.2.1.md
@@ -211,7 +211,7 @@ ConfigServer Firewall can now be used with OpenPanel. To switch to CSF:
 
 This will open needed ports and edit csf.conf to allow docker networks to communicate to the host.
 
-Please note that currently there is no interface in OpenAdmin to manage the CSF, so all changes need to be made [from the terminal](https://pcx3.com/cheatsheets/csf/) or by using [CSF UI](https://tecadmin.net/how-to-enable-csf-firewall-web-ui/).
+Please note that currently there is no interface in OpenAdmin to manage the CSF, so all changes need to be made from the terminal or by using [CSF UI](https://tecadmin.net/how-to-enable-csf-firewall-web-ui/).
 
 ### Custom CSS
 
