--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -17,3 +17,4 @@ Not yet released.
 - fixed bug on WP auto-login when subdirectory is used but docroot is passed from frontend.
 - fixed css bugs with breadcrumbs on *OpenAdmin > Security > ImunifyAV* page.
 - [Can't disable services for user #632](https://github.com/stefanpejcic/OpenPanel/issues/632)
+- fixed css bug with resource usage flickering on page load on *OpenAdmin > Dashboard* page.
