--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -7,6 +7,7 @@ Not yet released.
 - `fonts.googleapis.com`, `gstatic.com`, `api.github.com`, `app.grapesjs.com`, `fonts.bunny.net` and `fonts.gstatic.com` removed from CSP header.
 - added html IDs to all sections in *OpenPanel > Dashboard* to be used for custom css.
 - `Failed to load speed data` is removed from /sites when data is missing.
+- password reset functionallity is restored.
 
 ### 🐛 Bug Fixes
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
