--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [BETA support for OpenLitespeed](https://community.openpanel.org/d/180-beta-testers-wanted-openlitespeed-openpanel)
 - [Added RNAME to default DNS zone templates](/docs/admin/domains/dns_templates/#available-template-variables) - suggested by Dominik.
 - added descriptive error messages for failed auto-login on WP Manager.
 - added [*OpenAdmin > Services > Limits*](/docs/admin/services/limits) page where Administrators can set limits for webserver, dns, openpanel UI and other system services.
