--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -11,6 +11,7 @@ Not yet released.
 - [password reset functionallity is restored](https://openpanel.com/docs/panel/intro/#password-reset).
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI: VHost Editor shows in search when module is disabled #627](https://github.com/stefanpejcic/OpenPanel/issues/627)
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
 - [Bug in OpenPanel UI on / when adding to Favorites - Link and title must be provided #628](https://github.com/stefanpejcic/OpenPanel/issues/628)
 - [WP Autologin not working after 1.5.5 update #631](https://github.com/stefanpejcic/OpenPanel/issues/631)
