--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -10,6 +10,7 @@ Not yet released.
 - `Failed to load speed data` is removed from /sites when data is missing.
 - [password reset functionallity is restored](https://openpanel.com/docs/panel/intro/#password-reset).
 
+
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI: VHost Editor shows in search when module is disabled #627](https://github.com/stefanpejcic/OpenPanel/issues/627)
 - [Error on /domains/redirect NameError: name 'get_redirect_url' is not defined. Did you mean: 'set_redirect'? #629](https://github.com/stefanpejcic/OpenPanel/issues/629)
@@ -17,6 +18,7 @@ Not yet released.
 - [WP Autologin not working after 1.5.5 update #631](https://github.com/stefanpejcic/OpenPanel/issues/631)
 - [WordPress Uninstall not working after 1.5.5 update #630](https://github.com/stefanpejcic/OpenPanel/issues/630)
 - fixed bug with `opencli imunify install` downloading imunify via IPv6.
+- fixed startup bug `ERROR importing module 'action': No module named 'modules.action'`
 - fixed bug on WP auto-login when subdirectory is used but docroot is passed from frontend.
 - fixed css bugs with breadcrumbs on *OpenAdmin > Security > ImunifyAV* page.
 - [Can't disable services for user #632](https://github.com/stefanpejcic/OpenPanel/issues/632)
