--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -24,3 +24,4 @@ Not yet released.
 - [Can't disable services for user #632](https://github.com/stefanpejcic/OpenPanel/issues/632)
 - fixed typo causing redirects module not to load on UI.
 - fixed css bug with resource usage flickering on page load on *OpenAdmin > Dashboard* page.
+- fixed issue detecting redirects for domain, causing each domain to show `redirects` text.
