--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -25,3 +25,5 @@ Not yet released.
 - fixed typo causing redirects module not to load on UI.
 - fixed css bug with resource usage flickering on page load on *OpenAdmin > Dashboard* page.
 - fixed issue detecting redirects for domain, causing each domain to show `redirects` text.
+- fixed error saving redirects: `TypeError: cannot pickle 're.Match' object` when dev_mode is enabled.
+- 
