--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -26,4 +26,4 @@ Not yet released.
 - fixed css bug with resource usage flickering on page load on *OpenAdmin > Dashboard* page.
 - fixed issue detecting redirects for domain, causing each domain to show `redirects` text.
 - fixed error saving redirects: `TypeError: cannot pickle 're.Match' object` when dev_mode is enabled.
-- 
+- fixed bug redirecting to `/api/domains` after creating a redirect from `/domains`.
