--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -27,3 +27,4 @@ Not yet released.
 - fixed issue detecting redirects for domain, causing each domain to show `redirects` text.
 - fixed error saving redirects: `TypeError: cannot pickle 're.Match' object` when dev_mode is enabled.
 - fixed bug redirecting to `/api/domains` after creating a redirect from `/domains`.
+- fixed bug with redirects field accepting only https and not http links.
