--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -9,6 +9,8 @@ Not yet released.
 - added html IDs to all sections in *OpenPanel > Dashboard* to be used for custom css.
 - `Failed to load speed data` is removed from /sites when data is missing.
 - [password reset functionallity is restored](https://openpanel.com/docs/panel/intro/#password-reset).
+- *restart needed* button on OpenAdmin > Dashboard is now visible to Reseller users as well.
+- Added resource usage widget on top-right of OpenAdmin.
 
 
 ### 🐛 Bug Fixes
