--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -10,7 +10,7 @@ Not yet released.
 - `Failed to load speed data` is removed from /sites when data is missing.
 - [password reset functionallity is restored](https://openpanel.com/docs/panel/intro/#password-reset).
 - *restart needed* button on OpenAdmin > Dashboard is now visible to Reseller users as well.
-- Added resource usage widget on top-right of OpenAdmin.
+- [Added resource usage widget on top-right of OpenAdmin](/docs/admin/dashboard/#sse-usage).
 
 
 ### 🐛 Bug Fixes
