--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - Refactored `goaccess` module.
 - `/phpmyadmin/manage` route is removed.
+- ['mautic' module is added, allowing users to Auto-install Mautic](/docs/articles/websites/how-to-install-mautic-with-openpanel/).
 
 ### 🐛 Bug Fixes
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
