--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -7,4 +7,5 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
+- [Bug after 1.5.6 update on *Dashboard > 2FA widget* #641](https://github.com/stefanpejcic/OpenPanel/issues/641)
 
