--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -9,3 +9,4 @@ Not yet released.
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
 - [Bug after 1.5.6 update on *Dashboard > 2FA widget* #641](https://github.com/stefanpejcic/OpenPanel/issues/641)
 - Fixed bug `/entrypoint.sh: line 27: echo [!] Creating include section for domain: josjedan.rs: command not found` when adding domains for openlitespeed webserver.
+- Fixed bug on *OpenAdmin > Advanced > System Cron Jobs* with 'opencli sentinel' commands.
