--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- `/domains/ssl` and `/domains/docroot` pages are now in separate modules: `ssl` and `docroot`.
 - Refactored `goaccess` module.
 - `/phpmyadmin/manage` route is removed.
 - ['mautic' module is added, allowing users to Auto-install Mautic](/docs/articles/websites/how-to-install-mautic-with-openpanel/).
