--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -13,3 +13,7 @@ Not yet released.
 - Fixed bug `/entrypoint.sh: line 27: echo [!] Creating include section for domain: josjedan.rs: command not found` when adding domains for openlitespeed webserver.
 - Fixed bug on *OpenAdmin > Advanced > System Cron Jobs* with 'opencli sentinel' commands.
 - [Bug in OpenAdmin UI on /settings/open-panel #642](https://github.com/stefanpejcic/OpenPanel/issues/642)
+- fixed bug with SSL and Docroot icons missing in *OpenPanel > Dashboard*.
+- fixed bug with SSL missing in OpenPanel UI search.
+- fixed bug with ImunifyAV missing in OpenAdmin UI search.
+
