--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -16,4 +16,4 @@ Not yet released.
 - fixed bug with SSL and Docroot icons missing in *OpenPanel > Dashboard*.
 - fixed bug with SSL missing in OpenPanel UI search.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
-
+- fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
