--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Domains > Redirects - add support for custom ports [FEATURE REQUEST] #646](https://github.com/stefanpejcic/OpenPanel/issues/646)
 - `/domains/ssl` and `/domains/docroot` pages are now in separate modules: `ssl` and `docroot`.
 - Refactored `goaccess` module.
 - `/phpmyadmin/manage` route is removed.
@@ -8,7 +9,7 @@ Not yet released.
 - Fixed bug starting php and webserver when domain is added, on plan that has DNS only features.
 
 ### 🐛 Bug Fixes
-- [Domains > Redirects - add support for custom ports [FEATURE REQUEST] #646](https://github.com/stefanpejcic/OpenPanel/issues/646)
+- [Domains > Redirects work only for HTTP and not for HTTPS #645](https://github.com/stefanpejcic/OpenPanel/issues/645)
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
 - [Bug after 1.5.6 update on *Dashboard > 2FA widget* #641](https://github.com/stefanpejcic/OpenPanel/issues/641)
 - Fixed bug `/entrypoint.sh: line 27: echo [!] Creating include section for domain: josjedan.rs: command not found` when adding domains for openlitespeed webserver.
