--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -9,6 +9,7 @@ Not yet released.
 - Fixed bug starting php and webserver when domain is added, on plan that has DNS only features.
 
 ### 🐛 Bug Fixes
+- [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
 - [Bug on /sites - tooltip not showing on hover over pagespeed #635](https://github.com/stefanpejcic/OpenPanel/issues/635)
 - [Domains > Redirects work only for HTTP and not for HTTPS #645](https://github.com/stefanpejcic/OpenPanel/issues/645)
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
