--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -10,6 +10,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
+- [WordPress asking for FTP credentials (Litespeed) #636](https://github.com/stefanpejcic/OpenPanel/issues/636)
 - [Bug on /sites - tooltip not showing on hover over pagespeed #635](https://github.com/stefanpejcic/OpenPanel/issues/635)
 - [Domains > Redirects work only for HTTP and not for HTTPS #645](https://github.com/stefanpejcic/OpenPanel/issues/645)
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
