--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -8,6 +8,7 @@ Not yet released.
 - ['mautic' module is added, allowing users to Auto-install Mautic](/docs/articles/websites/how-to-install-mautic-with-openpanel/).
 - Fixed bug starting php and webserver when domain is added, on plan that has DNS only features.
 - [Improvements to *OpenAdmin > Settings > User Defaults* page](https://i.postimg.cc/LHnv8McC/2025-08-20-16-08.png).
+- `--csf` flag is removed from install script.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
