--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -9,7 +9,7 @@ Not yet released.
 - Fixed bug starting php and webserver when domain is added, on plan that has DNS only features.
 - [Improvements to *OpenAdmin > Settings > User Defaults* page](https://i.postimg.cc/LHnv8McC/2025-08-20-16-08.png).
 - `--csf` flag is removed from install script.
-- Caddyfile for domain is now editable from *OpenAdmin > Domains*.
+- Administrators can now edit Caddyfile or VirtualHosts files for domains from *OpenAdmin > Domains*.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
