--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -10,6 +10,7 @@ Not yet released.
 - [Improvements to *OpenAdmin > Settings > User Defaults* page](https://i.postimg.cc/LHnv8McC/2025-08-20-16-08.png).
 - `--csf` flag is removed from install script.
 - Administrators can now edit Caddyfile or VirtualHosts files for domains from *OpenAdmin > Domains*.
+- added descriptive error messages to all `/domains` pages on OpenAdmin.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
